# mnemo

./: Makefile.conda  README.md  environment.yml  pyproject.toml
data/: .gitignore  continuity.schema.json
deploy/: .gitignore  README.md  desktop-commander.conf  desktop_commander_config.json  gateway@.service  hearth.conf  hearth.service  mcp-secrets.conf  memory.conf  presence.conf  tool-cache.conf  tunnel-watchdog.conf  tunnel-watchdog.py  tunnel-watchdog.service  tunnel-watchdog.timer  tunnel-watchdog@.service  tunnel-watchdog@.timer
docs/: .gitignore  AUTHORS.md  CONFIGURE.md  CONTRIBUTING.md  DESIGN.md  MCP.md  QUICK_START.md  RESOURCES.md  TODO.md  TROUBLESHOOTING.md
src/mcp_gateway/: __main__.py  dns.py  mcp.conf  mcp.conf.example  mcp.py  tunnel.py
src/mcp_gateway/transports/: auth_proxy.py  proxy.py  tunnel.py  upnp.py
src/mnemo/: agent.py  app.py  conversation.py  hearth.py  memory_mcp.py  voice.py
src/presence/: __init__.py  embed.py  index.py  store.py
src/tool_cache/: embed.py  mcp.py  store.py
