[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mnemo"
version = "0.0.1"
description = "Mnemo — xAI agent with MCP tool access"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
server = [
  "xai_sdk",
  "cloudflare",
  "pycloudflared",
  "mcp-proxy",
  "qdrant-client>=1.9",
]
app = [
  "textual",
  "sounddevice",
  "websockets",
]
presence = [
  "qdrant-client>=1.9",
  "sentence-transformers>=3.0",
]
tool-cache = [
  "qdrant-client>=1.9",
]

[project.scripts]
mnemo = "mnemo.app:main"
mnemo-hearth = "mnemo.hearth:main"
mcp-gateway = "mcp_gateway.__main__:main"
mnemo-tool-cache = "tool_cache.mcp:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: integration tests requiring Docker",
]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["tests"]
omit = [
    "tests/archive-*/*",
    "tests/output/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["tests"]

[tool.pylint.main]
max-line-length = 100
disable = [
    "C0114",  # missing-module-docstring
    "C0115",  # missing-class-docstring
    "C0116",  # missing-function-docstring (for test functions)
]
ignore-paths = []

[tool.pylint.design]
max-args = 7
max-locals = 15

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
fix = false
builtins = []
line-length = 88
indent-width = 2
target-version = "py311"
[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = []
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"
[tool.ruff.lint.per-file-ignores]
